<resources>
    <string name="app_name">GeoActividades</string>
    <string name="title_home">Home</string>
    <string name="title_search">Busqueda</string>
    <string name="title_profile">Perfil</string>
    <string name="title_map">Mapa</string>
    <string name="tv_shows">Series de TV</string>
    <string name="food">Comida</string>
    <string name="cinema">Cine</string>
    <string name="submit">Guardar</string>
    <string name="reggaeton">Reggaeton</string>
    <string name="cultureThings">Cultura</string>
    <string name="culture">Cultura</string>
    <string name="foodThings">Comida</string>
    <string name="musicThings">Musica</string>
    <string name="travelThings">Viajar</string>
    <string name="tvThings">Television</string>
    <string name="select_your_preferences">Elige tus preferencias</string>
    <string name="videogames">Video Juegos</string>
    <string name="logout">Desconectarse</string>
    <string name="Edityourname">Edita tu nombre</string>
    <string name="edityouremail">Edita tu email</string>
    <string name="editpassword">Edita tu contraseña</string>
    <string name="editage">Edita tu fecha de nacimiento</string>
    <string name="outdoor">Actividades al aire libre</string>
    <string name="romance">Romance</string>
    <string name="misterio">Misterio</string>
    <string name="leyes">Leyes</string>
    <string name="historia">Historia</string>
    <string name="ni_os">Niños</string>
    <string name="religion">Religion</string>
    <string name="cocina">Cocina</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="comics">Comics</string>
    <string name="mis_preferencias_actuales">Mis Preferencias actuales</string>
    <string name="subcategoria_cienciaficcion">subcategoria cienciaficcion</string>
    <string name="subcategoria_romance">subcategoria romance</string>
    <string name="subcategoria_misterio">subcategoria misterio</string>
    <string name="subcategoria_ley">subcategoria ley</string>
    <string name="subcategoria_ni_os">subcategoria niños</string>
    <string name="subcategoria_religion">subcategoria religion</string>
    <string name="subcategoria_tecnologia">subcategoria tecnologia</string>
    <string name="subcategoria_gastronomia">subcategoria gastronomia</string>
    <string name="subcategoria_historia">subcategoria historia</string>
    <string name="subcategoria_comics">subcategoria comics</string>
    <string name="generos_literarios">Generos Literarios</string>
    <string name="generos_cinematograficos">Generos cinematograficos</string>
    <string name="terror">Terror</string>
    <string name="comedia">Comedia</string>
    <string name="fantastico">Fantastico</string>
    <string name="musical">Musical</string>
    <string name="animacion">Animacion</string>
    <string name="titulo_de_la_actividad">Titulo de la actividad</string>
    <string name="tags">Tags:</string>
    <string name="fotografia_de_la_actividad">Fotografia de la actividad</string>
    <string name="asistire">asistire</string>
    <string name="filtrar_por">FILTRAR POR</string>
    <string name="modificar_preferencias">Modificar preferencias</string>
    <string name="musica">Musica</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="television">Television</string>
    <string name="cine">Cine</string>
    <string name="salirdecasa">salir</string>
    <string name="cultura">Cultura</string>
    <string name="Videojuegos">videoJuegos</string>
    <string name="literatura">Literatura</string>
    <string name="deportes">Deportes</string>
    <string name="modificar_datos_de_usuario">Modificar datos de usuario</string>
    <string name="categorybooks">categoryBooks</string>
    <string name="libros">Libros</string>
    <string name="categorysports">categorySports</string>
    <string name="n_de_actividades">Nº de Actividades</string>
    <string name="mis_datos_email">Mis Datos (email)</string>
    <string name="fondo_de_pantalla">fondo de pantalla</string>
    <string name="fotografia_del_usuario">fotografia del usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proximos">Proximos</string>
    <string name="mejor_valorados">Mejor valorados</string>
    <string name="ndeactividades">Nº DE ACTIVIDADES</string>
    <string name="todo">TODO</string>
    <string name="mapa">Mapa</string>
    <string name="direccion_del_evento">Direccion del evento</string>
    <string name="imagen_del_evento">imagen del evento</string>
    <string name="nombre_actividad">Nombre actividad</string>
    <string name="horario_de_apertura">Horario de apertura</string>
    <string name="horario_de_cierre">Horario de cierre</string>
    <string name="telefono_de_contacto">Telefono de contacto</string>
    <string name="descripcion_exhaustiva">Descripcion exhaustiva</string>
    <string name="url">URL</string>
    <string name="precio_del_evento">Precio del evento</string>
    <string name="hoy">HOY</string>
    <string name="proximo">PROXIMO</string>
    <string name="mejores">MEJORES</string>
    <string name="n_de_actividades_encontradas">Nº DE ACTIVIDADES ENCONTRADAS</string>
    <string name="terrorcine">terror</string>
    <string name="accioncine">accion</string>
    <string name="romanticascine">romanticas</string>
    <string name="peliculas_de_ciencia_ficcion">Peliculas de Ciencia ficcion</string>
    <string name="dramacine">Drama</string>
    <string name="musicales">Musicales</string>
    <string name="animacioncine">Animacion</string>
    <string name="thrillercine">Thriller</string>
    <string name="seleccione_tres_preferencias">Seleccione tres preferencias</string>
    <string name="actividades_culturales">Actividades culturales</string>
    <string name="exposiciones">Exposiciones</string>
    <string name="actividades_con_ni_os">Actividades con niños</string>
    <string name="actividades_religiosas">Actividades Religiosas</string>
    <string name="galerias_de_arte">Galerias de arte</string>
    <string name="actividades_tecnologicas">Actividades Tecnologicas</string>
    <string name="teatro">Teatro</string>
    <string name="actividades_con_naturaleza">Actividades con Naturaleza</string>
    <string name="museos">Museos</string>
    <string name="espectaculos">Espectaculos</string>
    <string name="americana">Americana</string>
    <string name="india">India</string>
    <string name="china">China</string>
    <string name="espa_ola">Española</string>
    <string name="francesa">Francesa</string>
    <string name="griega">Griega</string>
    <string name="mexicana">Mexicana</string>
    <string name="italiana">Italiana</string>
    <string name="comida_rapida">Comida Rapida</string>
    <string name="vegana">Vegana</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="acceder">Acceder</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="he_olvidado_la_contrase_a">He olvidado la contraseña</string>
    <string name="museosfoto">museos</string>
    <string name="fondo">fondo</string>
    <string name="fecha">Fecha</string>
    <string name="categoria_comedia">categoria comedia</string>
    <string name="categoria_cine">categoria cine</string>
    <string name="categoria_television">categoria television</string>
    <string name="categoria_musica">categoria musica</string>
    <string name="categoria_comida">categoria comida</string>
    <string name="categoria_salir">categoria salir</string>
    <string name="categoria_cultura">categoria cuñtura</string>
    <string name="categoria_literatura">categoria literatura</string>
    <string name="categoria_videojuegos">categoria videojuegos</string>
    <string name="categoria_deportes">categoria deportes</string>
    <string name="espectaculosPicture">espectaculos</string>
    <string name="comediaCategory">comedia</string>
    <string name="exposicionesCategory">exposiciones</string>
    <string name="actividades_con_animales">actividades con animales</string>
    <string name="actividades_infantiles">actividades infantiles</string>
    <string name="actividades_religiosasCategory">actividades religiosas</string>
    <string name="galeria_de_arte">galeria de arte</string>
    <string name="actividades_con_tecnologia">actividades con tecnologia</string>
    <string name="teatros">teatros</string>
    <string name="metal">Metal</string>
    <string name="pop">Pop</string>
    <string name="musica_pop">musica pop</string>
    <string name="clasica">Clasica</string>
    <string name="regaetton">regaetton</string>
    <string name="musica_techno">musica techno</string>
    <string name="soul">Soul</string>
    <string name="rap">Rap</string>
    <string name="generos_musicales">Generos Musicales</string>
    <string name="rock">Rock</string>
    <string name="musica_metal">musica metal</string>
    <string name="blues">Blues</string>
    <string name="musica_soul">musica soul</string>
    <string name="musica_blues">musica blues</string>
    <string name="musica_rock">musica rock</string>
    <string name="techno">Techno</string>
    <string name="musica_clasica">musica clasica</string>
    <string name="musica_rap">musica rap</string>
    <string name="musica_reagge">musica reagge</string>
    <string name="reagge">Reagge</string>
    <string name="generos_televisivos">Generos televisivos</string>
    <string name="supernatural">Supernatural</string>
    <string name="telecomedia">Telecomedia</string>
    <string name="accion">Accion</string>
    <string name="heroes">Heroes</string>
    <string name="ciencia_ficcion">Ciencia Ficcion</string>
    <string name="fantasia">Fantasia</string>
    <string name="drama">Drama</string>
    <string name="crimen">Crimen</string>
    <string name="thriller">Thriller</string>
    <string name="tv_accion">tv accion</string>
    <string name="tv_ciencia">tv ciencia</string>
    <string name="categoria_terror">categoria terror</string>
    <string name="genero_comedia">comedia</string>
    <string name="romantico">Romantico</string>
    <string name="categoria_drama">categoria drama</string>
    <string name="categoria_animacion">categoria animacion</string>
    <string name="dibujos_animados">Dibujos animados</string>
    <string name="genero_fantastico">genero fantastico</string>
    <string name="genero_de_suspense">genero de suspense</string>
    <string name="genero_romantico">genero romantico</string>
    <string name="genero_musical">genero musical</string>
    <string name="cocina_americana">cocina Americana</string>
    <string name="cocina_india">cocina india</string>
    <string name="cocina_francesa">cocina francesa</string>
    <string name="categoria_cocina_francesa">Cocina Francesa</string>
    <string name="cocina_mexicana">cocina mexicana</string>
    <string name="cocina_griega">cocina griega</string>
    <string name="cocian_italiana">cocian italiana</string>
    <string name="cocina_rapida">cocina rapida</string>
    <string name="cocina_italiana">cocina italiana</string>
    <string name="cocina_vegana">cocina vegana</string>
    <string name="cocina_espa_ola">cocina española</string>
    <string name="musica_tecno">musica tecno</string>

    <string name="musica_regaton">musica regaton</string>
    <string name="calendario">Calendario</string>


</resources>
