<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingLeft="30dp"
    android:paddingTop="80dp"
    android:paddingRight="30dp"
    tools:context=".start_activities.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/design_default_color_on_primary">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEmail"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/design_default_color_on_primary"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/design_default_color_on_primary"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPassword"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPassword"
        android:layout_marginTop="50dp"
        android:background="@drawable/borde_redondo_blanco"
        android:text="@string/acceder"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/textViewForgotPassword"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contextClickable="true"
        android:gravity="center|center_vertical"
        android:text="@string/he_olvidado_la_contrase_a"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:focusable="true" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:drawableEnd="@drawable/arrow_right_white_18dp"
        android:gravity="center"
        android:text="@string/crear_nueva_cuenta"
        android:textColor="@android:color/white" />


</RelativeLayout>