<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewActivityPlan"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewCardviewActivity"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/fotografia_de_la_actividad"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/wella" />

        <TextView
            android:id="@+id/textViewCardviewActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:background="@android:color/holo_blue_dark"
            android:clickable="false"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:inputType="textLongMessage"
            android:text="@string/titulo_de_la_actividad"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBarCardviewActivity"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="370dp"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:progressTint="#FFEB3B"
            android:rating="4" />

        <Button
            android:id="@+id/buttonAsistireCardviewActivity"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center|right"
            android:backgroundTint="@android:color/holo_blue_light"
            android:drawableStart="@drawable/baseline_favorite_border_black_18dp"
            android:drawableTint="#F44336"
            android:text="@string/asistire"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewTagsCardviewActivity"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="310dp"
            android:text="@string/tags"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTagsLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="310dp"
            android:text="@string/tags"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="355dp"
            android:text="Fecha"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>


